--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 # The name of the project
 set(APP_NAME BLoader)
 
+set(LIB_NAME BLoader_lib)
+
 # Sources and headers to be included in compilation
 set(SOURCES
 	"source/bloader.cpp"
@@ -28,7 +30,10 @@ include_directories("include/")
 include_directories("project/")
 
 # Compile as a library
-add_library(${APP_NAME} ${SOURCES} ${HEADERS})
+add_library(${LIB_NAME} ${SOURCES} ${HEADERS})
+
+# And as a DLL as well.
+add_library(${APP_NAME} SHARED ${SOURCES} ${HEADERS})
 
 # Link the library with more libraries, if needed
 target_link_libraries(${APP_NAME})
