Made it hook Sim__init, added MologieDetours.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,16 @@
 # Absolute minimum cmake version
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
+#Include MologieDetours cmake file
+include(MologieDetours.cmake)
+
 # The name of the project
 set(LIB_NAME BLoader)
+
+set(LIBRARIES 
+	${LIB_NAME}
+	"MologieDetours"
+	)
 
 # Sources and headers to be included in compilation
 set(SOURCES
@@ -37,4 +45,4 @@ add_definitions(-DBLOADER_DLL=1)
 add_library(${LIB_NAME} SHARED ${SOURCES} ${HEADERS})
 
 # Link the library with more libraries, if needed
-target_link_libraries(${LIB_NAME})
+target_link_libraries(${LIBRARIES})
