First re-factorization and redesign of Torque Engine
Hopefully did not break anything.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,28 @@ set(LIBRARIES
 	)
 
 # Sources and headers to be included in compilation
+set(SOURCES_TORQUE
+	"source/torque/functions.cpp"
+	"source/torque/scanner.cpp"
+	"source/torque/torque.cpp"
+	"source/torque/utility.cpp"
+	)
+
+set(HEADERS_TORQUE
+	"include/torque/functions.h"
+	"include/torque/scanner.h"
+	"include/torque/torque.h"
+	"include/torque/types.h"
+	"include/torque/utility.h"
+	)
+
 set(SOURCES
 	"source/bloader.cpp"
 	"source/dllmain.cpp"
 	"source/engine.cpp"
 	"source/filesystem.cpp"
 	"source/library.cpp"
-	"source/Torque.cpp"
+	"${SOURCES_TORQUE}"
 	)
 
 set(HEADERS
@@ -30,12 +45,13 @@ set(HEADERS
 	"include/filesystem.h"
 	"include/library.h"
 	"include/library_impl.h"
-	"include/Torque.h"
+	"${HEADERS_TORQUE}"
 	"project/blibrary.h"
 	)
 
 # Include directories
 include_directories("include/")
+include_directories("include/torque")
 include_directories("project/")
 
 # Multi threaded
@@ -48,6 +64,9 @@ add_definitions(-DBLOADER_DLL=1)
 
 # Compile as a library
 add_library(${LIB_NAME} SHARED ${SOURCES} ${HEADERS})
+
+# VS filters
+source_group("torque" FILES ${SOURCES_TORQUE} ${HEADERS_TORQUE})
 
 # Link the library with more libraries, if needed
 target_link_libraries(${LIB_NAME} ${LIBRARIES})
