--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Absolute minimum cmake version
-cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 
 #Include MologieDetours cmake file
 include(MologieDetours.cmake)
@@ -10,8 +10,13 @@ set(LIB_NAME BLoader)
 # The libraries to load
 set(LIBRARIES 
 	"MologieDetours"
+	"psapi"
 	)
 
+# Activate C++14 on MingW cross-compiling situations.
+set (CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 # Sources and headers to be included in compilation
 set(SOURCES_TORQUE
 	"source/torque/functions.cpp"
@@ -54,16 +59,19 @@ include_directories("include/")
 include_directories("include/torque")
 include_directories("project/")
 
-# Multi threaded
-if(MSVC)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
-endif()
 
 # Make sure functions are exported
 add_definitions(-DBLOADER_DLL=1)
 
 # Compile as a library
 add_library(${LIB_NAME} SHARED ${SOURCES} ${HEADERS})
+# Multi threaded
+if(MSVC)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+else()
+	SET_TARGET_PROPERTIES(BLoader PROPERTIES LINK_FLAGS "-static-libgcc -static-libstdc++")
+endif()
+
 
 # VS filters
 source_group("torque" FILES ${SOURCES_TORQUE} ${HEADERS_TORQUE})
